--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="col ">
         <div class="carousel-inner ">
             <div class="carousel-item active " >
-                <img  src="/imangi/imgmain.jpg" class="d-block w-100  " alt="...">
+                <img  src="imgmain.jpg" class="d-block w-100  " alt="...">
                 <div class="carousel-caption d-none d-md-block text-dark pb-5" style="margin-bottom: 172px;"  >
                     <div class="centered">
                 <h1 class="container-fluid" style="color: black;font-size: 50px;" ><b>Imangi STUDIOS</b></h1>
@@ -84,14 +84,14 @@
                 </div>
                 <div class="col-md-6 pt-5 text-secondary">
                     <div class="card rounded mx-auto d-block" style="width: 442px ">
-                        <a href="https://imangistudios.com/thegames/temple-run-puzzle-adventure/"> <img src="/imangi/puzzle.jpg" class="card-img-top" style="border-radius:5%;" alt="..."></a>
+                        <a href="https://imangistudios.com/thegames/temple-run-puzzle-adventure/"> <img src="puzzle.jpg" class="card-img-top" style="border-radius:5%;" alt="..."></a>
                         
                     </div>
                     <h4 style="text-align: center;" >Temple Run Puzzle Adventure</h4>
                 </div>
                 <div class="col-md-6 pt-5 text-secondary">
                     <div class="card rounded mx-auto d-block" style="width: 442px;">
-                        <img src="/imangi/comingsoon.jpg" class="card-img-top" style="border-radius:5%;" alt="...">
+                        <img src="comingsoon.jpg" class="card-img-top" style="border-radius:5%;" alt="...">
                         
                     </div>
                     <h4 style="text-align: center;">Wouldn't You Like To Know?!</h4>
@@ -123,7 +123,7 @@
             <!--golden idol-->
             <div class="col-md-6 pt-5">
                 <div class="container pt-5">
-                    <img src="/imangi/golden-idol.png" alt="">
+                    <img src="golden-idol.png" alt="">
                 </div>
 
             </div>
@@ -168,19 +168,19 @@
                     <div>
                     <ul style="list-style-type: none; padding-left: 232px;" class="name">
                         <li style="float: left;" >
-                            <a href="https://www.facebook.com/TempleRun/ "> <img style="width: 30px;" src="/imangi/face.png" alt=""></a>
+                            <a href="https://www.facebook.com/TempleRun/ "> <img style="width: 30px;" src="face.png" alt=""></a>
                         </li>
                         <li style="float: left;" >
-                            <a href="https://twitter.com/TempleRun"> <img style="width: 35px;" src="/imangi/x.png" alt=""></a>
+                            <a href="https://twitter.com/TempleRun"> <img style="width: 35px;" src="x.png" alt=""></a>
                         </li>
                         <li style="float: left;" >
-                            <a href="https://www.instagram.com/templerun"> <img style="width: 30px;" src="/imangi/insta.png" alt=""></a>
+                            <a href="https://www.instagram.com/templerun"> <img style="width: 30px;" src="insta.png" alt=""></a>
                         </li>
                         <li style="float: left;">
-                            <a href="https://www.twitch.tv/imangistudios"> <img style="width: 30px;" src="/imangi/mess.png" alt=""></a>
+                            <a href="https://www.twitch.tv/imangistudios"> <img style="width: 30px;" src="mess.png" alt=""></a>
                         </li>
                         <li >
-                            <a href="https://www.youtube.com/channel/UCQTSYlKdQkiQdR0w5Bhgfuw"><img style="width: 40px; margin-top: -5px;" src="/imangi/youtube.png" alt=""></a>
+                            <a href="https://www.youtube.com/channel/UCQTSYlKdQkiQdR0w5Bhgfuw"><img style="width: 40px; margin-top: -5px;" src="youtube.png" alt=""></a>
                         </li>
                     </ul>
                 </div>
@@ -189,10 +189,10 @@
                 <div class="col-md-6">
                     <ul style="list-style-type: none; padding-left: 105px;">
                         <li style="float: left;">
-                            <a href="https://apps.apple.com/us/developer/imangi-studios-llc/id284899742"><img style="width: 180px;" src="/imangi/appstore.png" alt=""></a>
+                            <a href="https://apps.apple.com/us/developer/imangi-studios-llc/id284899742"><img style="width: 180px;" src="appstore.png" alt=""></a>
                         </li>
                         <li>
-                            <a href="https://play.google.com/store/apps/developer?id=Imangi+Studios"><img style="width: 180px;" src="/imangi/playstore (1).png" alt=""></a>
+                            <a href="https://play.google.com/store/apps/developer?id=Imangi+Studios"><img style="width: 180px;" src="playstore (1).png" alt=""></a>
                         </li>
                     </ul>
                 </div>
