--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="bg-dark" style="position: fixed;width: 100%;z-index: 1;">
         <div class="row" style="background-color: black;">
             <div class="col-md-6  ">
-                <span><a href="/imangi/index.html"><img  src="/imangi/imangi-logo2.png " class="rounded mx-auto d-block alt="></span>
+                <span><a href="/imangi/index.html"><img  src="imangi-logo2.png " class="rounded mx-auto d-block alt="></span>
             </div>
         <div class="col-md-6 ">
             
@@ -161,7 +161,7 @@
         
         <div class="container-fluid" style="background: #000000;">
             <div class="row">
-                <div class="col-md-6 text-white">
+                <div class="col-md6 text-white">
                     <span style="letter-spacing: -1px; padding-left: 240px;" >
                         FOLLOW US
                     </span>
